ADDED FUNCTIONALITY FOR BOYCOTTSCANNER APPS PROTOTYPE
ALSO I EDITED THE XML TO MAKE SOME THING CONSISTENT

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".BookmarkListActivity" />
+        <activity android:name=".AboutUsActivity" />
+        <activity android:name=".ScanCodeActivity" />
+        <activity android:name=".ProductDetailActivity" />
+        <activity android:name=".CategoryListActivity" />
     </application>
 
 </manifest>
